feat(popup): reroute create account button to carbonq website

--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -31,7 +31,7 @@
         </div>
         <div id="auth-error" class="error hidden"></div>
         <button type="submit" id="auth-btn" class="btn-primary">Sign In</button>
-        <button type="button" id="toggle-btn" class="btn-ghost">Create Account</button>
+        <a href="https://carbon-q.vercel.app/register" target="_blank" class="btn-ghost register-link">Create Account</a>
       </form>
     </div>
 
