feat(extension): ui updates to extension pop up
- Reduce the size of popup to accumulate all five
platforms if used
- Added a open dashboard link for user

--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -72,6 +72,8 @@
         <div class="savings-text" id="savings-text"></div>
       </div>
 
+      <a href="https://carbon-q.vercel.app/dashboard" target="_blank" class="dashboard-link">Open Dashboard</a>
+
       <div id="dash-loading" class="dash-loading hidden">
         <div class="loader small"></div>
       </div>
